# windmill

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
src/: CMakeLists.txt  windmill.cpp
test/: CMakeLists.txt
